# twigy

./: .gitignore  ACKNOWLEDGMENTS  CMakeLists.txt  LICENSE  README.md  benchmark.py  build_manylinux_wheel.sh  example.cpp  example.py  run_tests.sh  setup.py
docker/manywheels_build/: Dockerfile  build_manylinux_image.sh  build_wheel_docker.sh
docker/tests_python/: Dockerfile  build_tests_python_image.sh
src/: python_bindings.cpp
src/core/: criterion.cpp  criterion.h  criterion_test.cpp  decision_tree.cpp  decision_tree.h  decision_tree_test.cpp  random_forest.cpp  random_forest.h  splitter.cpp  splitter.h  splitter_test.cpp  utils.cpp  utils.h
test/: install_and_run_python_tests.sh  test.cpp  test.h  test_forest.py
test/testdata/: titanic_data.csv
